# nand-tools

./: .gitattributes  .gitignore  LICENSE  README.md
01-pei/12-digital-electronics/dev/: CMakeCache.txt  CMakeLists.txt  Makefile  ce-rocks-boii  ce-rocks-boii.project  ce-rocks-boii.workspace  cmake_install.cmake
02-tutorials/01-zcpu/verilog_tutorial/: verilog_tutorial.xpr
02-tutorials/02-simply-fpga-tuts/01_switches_to_leds/: 01_switches_to_leds.xpr
02-tutorials/02-simply-fpga-tuts/02_seven_seg_disp/: 02_seven_seg_disp.xpr
02-tutorials/03-fpga-projects/00_hello_world/: 00_hello_world.xpr
02-tutorials/04-its-embedded/01-verilator-tut/: Makefile  waveform.vcd
02-tutorials/05-make-mit/: Makefile  README  buffer.h  command.h  defs.h  edit  files.c  insert.c  main.c
03-ddca/04-hardware-desc-lang/01_intro/: 01_intro.xpr
03-ddca/04-hardware-desc-lang/02_comb_logic/: 02_comb_logic.xpr
03-ddca/04-hardware-desc-lang/03_struct_modeling/: 03_struct_modeling.xpr
03-ddca/04-hardware-desc-lang/04_seq_logic/: 04_seq_logic.xpr
03-ddca/04-hardware-desc-lang/05_more_comb_logic/: 05_more_comb_logic.xpr
03-ddca/04-hardware-desc-lang/06_fsm/: 06_fsm.xpr
03-ddca/04-hardware-desc-lang/11_exercises/: 11_exercises.xpr
03-ddca/05-digital-building-blocks/02_arithmetic_circuits/: 02_arithmetic_circuits.xpr
03-textbooks/02-nand2tetris/: .gitignore
03-textbooks/02-nand2tetris/cc/dev/hack_vm/: CMakeLists.txt  build.sh
03-textbooks/02-nand2tetris/cc/dev/hack_vm/scripts/: run_tests.sh
03-textbooks/02-nand2tetris/cc/dev/hack_vm/src/: main.cc  parser.cc  parser.h  vm_translator.cc  vm_translator.h
03-textbooks/02-nand2tetris/cc/dev/hack_vm/src/asm_coder/: asm_coder.cc  asm_coder.h
03-textbooks/02-nand2tetris/cc/dev/hack_vm/src/common/: log.h
03-textbooks/02-nand2tetris/cc/dev/hack_vm/src/parser/: parser.cc  parser.h
03-textbooks/02-nand2tetris/cc/dev/hack_vm/test/asm_coder/: asm_coder_test.cc
03-textbooks/02-nand2tetris/cc/dev/hack_vm/test/parser/: parser_basic_test.cc
03-textbooks/02-nand2tetris/projects/06/cc/dev/hack_assembler/: .gitignore  CMakeLists.txt  hack_assembler
03-textbooks/02-nand2tetris/projects/06/cc/dev/hack_assembler/scripts/: run_tests.sh
03-textbooks/02-nand2tetris/projects/06/cc/dev/hack_assembler/src/: assembler.cc  encoder.cc  main.cc  parser.cc
03-textbooks/02-nand2tetris/projects/06/cc/dev/hack_assembler/test/: assembler_test.cc  encoder_test.cc  parser_test.cc
04-fun/: row_hammer  row_hammer.cc  row_hammer.s
04-fun/num_sys/: comp10.c  comp9.c  main.c
projects/01/: DMux.hdl  DMux4Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
projects/02/: Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
projects/05/: CPU.hdl  Computer.hdl
(+948 files in other folders)
